# koiLM

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  chat.py  prepare_data.py  prompt_template.py  requirements.txt  run_after_training.bat  train.py
android/: README_ARCHITECTURE.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llama-android.cpp
android/app/src/main/java/com/koilm/app/: AppContainer.kt  MainActivity.kt
android/app/src/main/java/com/koilm/app/data/: CharacterRepository.kt  ChatRepository.kt
android/app/src/main/java/com/koilm/app/device/: DeviceSpecChecker.kt
android/app/src/main/java/com/koilm/app/llm/: LlamaBridge.kt  LlamaCppEngine.kt  LlmEngineProvider.kt  ModelImportManager.kt  PromptTemplate.kt
android/app/src/main/java/com/koilm/app/memory/: AffectionScorer.kt  ContextMemoryManager.kt
android/app/src/main/java/com/koilm/app/notification/: NotificationHelper.kt
android/app/src/main/java/com/koilm/app/settings/: AppPreferences.kt  ContentLevel.kt  ReplyMode.kt  RomanticTarget.kt
android/app/src/main/java/com/koilm/app/ui/: AgeGateScreen.kt  CharacterEditorScreen.kt  ChatScreen.kt  ContactListScreen.kt  ContentLevelSelector.kt  (+2 more)
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: themes.xml
data/: sample_dataset.jsonl
docs/: index.html
local_memory/: context_manager.py
scripts/: download_model.py  quantize_for_mobile.py
webui/: package-lock.json  package.json  server.js
webui/public/: app.js  index.html
webui/src/: affectionScorer.js  characterRepository.js  config.js  imageGen.js  imageTrigger.js  llmEngine.js  memoryManager.js  promptTemplate.js  store.js
windows/: .gitignore  NOTES.md  package-lock.json  package.json
windows/src/: chatRepository.js  config.js  contentLevel.js  delayedReply.js  imageGen.js  index.html  llmEngine.js  main.js  memoryManager.js  preload.js  renderer.js  romanticTarget.js  store.js
(+9 files in other folders)
